tests/test_assets/semantic/invalid/expressions/shift_operand_types.expected
semantic error at line 18: left operand of shift operator must be integer
semantic error at line 19: right operand of shift operator must be integer
semantic error at line 20: left operand of shift operator must be integer
semantic error at line 21: right operand of shift operator must be integer
semantic error at line 22: left operand of shift operator must be integer
semantic error at line 23: right operand of shift operator must be integer
semantic error at line 24: left operand of shift operator must be integer
semantic error at line 25: left operand of shift operator must be integer
semantic error at line 26: left operand of shift operator must be integer
semantic error at line 27: left operand of shift operator must be integer
10 semantic errors generated.
